tests/invalid/Lambda_Invalid_11.whiley
method m() :
    function(void)->int f = &(void x -> 1)